hphp/hack/test/typecheck/new_inference/shape_idx_then_invoke.php.like_types.exp
File "shape_idx_then_invoke.php", line 10, characters 20-21:
Invalid argument (Typing[4110])
File "shape_idx_then_invoke.php", line 10, characters 20-21:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_then_invoke.php", line 7, characters 10-24:
But got dynamic because it is an unenforceable type
File "shape_idx_then_invoke.php", line 11, characters 7-9:
You are trying to access the member foo but this object can be null.  (Typing[4064])
File "Shapes.hhi", line 33, characters 26-28:
This is what makes me believe it can be null
